--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "slugify": "^1.6.6"
   },
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "type" : "module",
-  "devDependencies": {},
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
